--- a/core/asset/css/base.scss
+++ b/core/asset/css/base.scss
@@ -92,7 +92,7 @@ h1, h1 * {
 h3 {
 	height:12px;
 	padding:5px 0 7px 12px;
-	background-color:$grey02;
+	background-color:$colorNeutral02;
 	font-weight:normal;
 	white-space:nowrap; }
 
@@ -100,7 +100,7 @@ h4 {
 	height:12px;
 	padding:5px 0 7px 12px;
 	background-color:$white;
-	border-bottom:1px solid $grey01;
+	border-bottom:1px solid $colorNeutral01;
 	font-weight:normal;
 	text-transform:uppercase;
 	white-space:nowrap; }
