--- a/core/asset/css/button.scss
+++ b/core/asset/css/button.scss
@@ -11,7 +11,7 @@ button {
 	padding:0px;
 	background:$white url('../img/bg-button-css3.png') repeat-x 0 50%;
 
-	border:1px solid $grey04;
+	border:1px solid $colorNeutral04;
 	-moz-border-radius:13px;
 	-khtml-border-radius:13px;
 	-webkit-border-radius:13px;
