--- a/core/asset/css/headlet-about.scss
+++ b/core/asset/css/headlet-about.scss
@@ -56,7 +56,7 @@
 		margin:24px 0 6px 0; }
 
 	.creditsbox {
-		border:1px solid $grey02;
+		border:1px solid $colorNeutral02;
 		height:150px;
 		clear:left;
 		margin:0 0 0 6px;
