--- a/core/asset/css/headlet-quickcreate.scss
+++ b/core/asset/css/headlet-quickcreate.scss
@@ -7,7 +7,7 @@
 		background:url(../img/headlet-icons.png) no-repeat 1px 6px; }
 
 	.content li.primary {
-		border-bottom:1px solid $grey02;
+		border-bottom:1px solid $colorNeutral02;
 		background-color:$colorCorporate01;
 
 		a:hover {
