--- a/core/asset/css/overflow-window.scss
+++ b/core/asset/css/overflow-window.scss
@@ -14,9 +14,9 @@ div.overflowWindow {
 	-moz-opacity:0.95;
 	-khtml-opacity:0.95;
 	opacity:0.95;
-	-webkit-box-shadow:2px 2px 5px $grey06;
-	-moz-box-shadow:2px 2px 5px $grey06;
-	box-shadow:2px 2px 5px $grey06;
+	-webkit-box-shadow:2px 2px 5px $colorNeutral06;
+	-moz-box-shadow:2px 2px 5px $colorNeutral06;
+	box-shadow:2px 2px 5px $colorNeutral06;
 
 	div.close {
 		position:absolute;
