--- a/core/asset/css/panel.scss
+++ b/core/asset/css/panel.scss
@@ -34,7 +34,7 @@
 		ul.naviList li {
 			line-height:18px;
 			padding:3px 0 3px 5px;
-			border-bottom:1px solid $grey02;
+			border-bottom:1px solid $colorNeutral02;
 
 			&.active {
 				background-color:$colorCorporate02; }
