--- a/core/asset/css/tab.scss
+++ b/core/asset/css/tab.scss
@@ -11,7 +11,7 @@
 
 	li {
 		p.label span.labeltext {
-			color:$grey08; }
+			color:$colorNeutral08; }
 
 		&.active p.label span.labeltext,
 		p.label:hover span.labeltext {
