--- a/core/asset/css/layout.scss
+++ b/core/asset/css/layout.scss
@@ -50,7 +50,7 @@ body {
 	margin:0 0 0 18px;
 	padding:6px 8px 12px 8px;
 	background-color:$colorCorporate00;
-	border:1px solid $grey05; }
+	border:1px solid $colorNeutral05; }
 
 
 
@@ -156,7 +156,7 @@ body {
 	left:0px;
 	width:100%;
 	height:5px;
-	background:$colorPositive01 url(../img/bg-footer.png) repeat-y 0 top; }
+	background:$colorApprove01 url(../img/bg-footer.png) repeat-y 0 top; }
 
 
 
@@ -233,15 +233,15 @@ body {
 		option {
 			padding:2px;
 			background-color:$white;
-			border-bottom:1px solid $grey02;
-			color:$grey08;
+			border-bottom:1px solid $colorNeutral02;
+			color:$colorNeutral08;
 
 			.odd {
-				background-color:$grey01; }
+				background-color:$colorNeutral01; }
 		}
 
 		&.filter option {
-			color:$grey08;
+			color:$colorNeutral08;
 
 			.selected {
 				background-color:$colorCorporate05;
@@ -329,19 +329,19 @@ label.toggleSelect {
 	background-color:$colorCorporate05; }
 
 .bcl05 {
-	background-color:$colorPositive05; }
+	background-color:$colorApprove05; }
 
 .bcl06 {
-	background-color:$colorPositive04; }
+	background-color:$colorApprove04; }
 
 .bcl07 {
 	background-color:$colorHighlight01; }
 
 .bcl08 {
-	background-color:$colorPositive03; }
+	background-color:$colorApprove03; }
 
 .bcl09 {
-	background-color:$colorPositive06; }
+	background-color:$colorApprove06; }
 
 .bcl10 {
 	background-color:$blue00; }
@@ -362,25 +362,25 @@ label.toggleSelect {
 	background-color:$black; }
 
 .bcg01 {
-	background-color:$grey02; }
+	background-color:$colorNeutral02; }
 
 .bcg02 {
-	background-color:$grey03; }
+	background-color:$colorNeutral03; }
 
 .bcg03 {
-	background-color:$grey02; }
+	background-color:$colorNeutral02; }
 
 .bcg04 {
 	background-color:$colorCorporate01; }
 
 .bcg05 {
-	background-color:$grey01; }
+	background-color:$colorNeutral01; }
 
 .bcg06 {
-	background-color:$grey07; }
+	background-color:$colorNeutral07; }
 
 .bcg07 {
-	background-color:$grey04; }
+	background-color:$colorNeutral04; }
 
 .bcg09 {
-	background-color:$grey06; }
+	background-color:$colorNeutral06; }
