--- a/core/asset/css/progress-box.scss
+++ b/core/asset/css/progress-box.scss
@@ -6,8 +6,8 @@
 	.bar {
 		width:180px;
 		height:16px;
-		background-color:$grey01;
-		border:1px solid $grey03;
+		background-color:$colorNeutral01;
+		border:1px solid $colorNeutral03;
 		margin-top:5px; }
 
 	.progress {
