--- a/core/asset/css/contentitemtabs.scss
+++ b/core/asset/css/contentitemtabs.scss
@@ -22,18 +22,18 @@ contentItemTabContainer .tabs li {
 
 .contentItemTabContainer .tabs li:hover,
 .contentItemTabContainer .tabs li.active {
-	background-color:#e3eace !important;
+	background-color:$colorCorporate02 !important;
 }
 
 /* contentItem tabs content */
 .contentItemTabContainer .tabContent {
-	background-color:#e3eace;
-	/*border-bottom:1px solid #ddd;*/
+	background-color:$colorCorporate02;
+	/*border-bottom:1px solid $colorNeutral02;*/
 }
 
 .contentItemTabContainer .tabContent .tab {
 	margin:9px;
-	border:1px solid #e1e1e1;
+	border:1px solid $colorNeutral01;
 }
 
 .contentItemTabContainer .tabContent .tabBlock {
@@ -51,5 +51,5 @@ contentItemTabContainer .tabs li {
 	top:0;
 	width:25px;
 	height:30px;
-	background:#d6dcc5 url(../img/toggle.png) no-repeat 0 -65px;
+	background:$colorCorporate04 url(../img/toggle.png) no-repeat 0 -65px;
 }
