--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -44,7 +44,7 @@ $colorAlert02:#991010;
 
 	// todoyu CI: blue
 $blue00:#b9eefc;
-$blue01:#a8c7de;
+$blue01:#CCD6E2;
 $blue02:#50c5b5;
 $blue03:#4f8ab4;
 $blue04:#24a5c3;
