--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -28,6 +28,13 @@ $colorNeutral09:#222222;
 
 	// Highlightning, todoyu CI: yellow
 $colorHighlight01:#e9eda1;
+$colorHighlight02:#f1f3be;
+$colorHighlight03:#ffffe0;
+$colorHighlight04:#ffffbb;
+
+	// Notice, todoyu CI: yellow/orange
+$colorNotice00:#ffac00;
+$colorNotice01:#ffdd99;
 
 	// Positive marking, todoyu CI: green
 $colorApprove01:#b0d026;
@@ -36,11 +43,14 @@ $colorApprove03:#c8d215;
 $colorApprove04:#c8ddbe;
 $colorApprove05:#9dc08e;
 $colorApprove06:#779124;
+$colorApprove07:#008000;
 
 	// Alert marking, todoyu CI: red
 $colorAlert00:#ff0000;
-$colorAlert01:#ad5050;
+$colorAlert01:#a84747;
 $colorAlert02:#991010;
+$colorAlert03:#ffa07a;
+$colorAlert04:#f6e0e0;
 
 	// todoyu CI: blue
 $blue00:#b9eefc;
@@ -49,3 +59,6 @@ $blue02:#50c5b5;
 $blue03:#4f8ab4;
 $blue04:#24a5c3;
 $blue05:#316AC5;
+$blue06:#0065A6;
+$blue07:#88aacc;
+$blue08:#aaccee;
