--- a/core/asset/css/infoballoon.scss
+++ b/core/asset/css/infoballoon.scss
@@ -1,3 +1,7 @@
+@import "../../config/theme.scss";
+
+
+
 em.infoBalloonAnchor {
 	background:url(../img/icons.png) no-repeat 1px -630px;
 	cursor:help;
@@ -15,8 +19,8 @@ em.infoBalloonAnchor {
 
 span.infoBalloon p,
 .infoBox span.infoBalloon p {
-	background-color:#f1f3be;
-	border:1px solid #c8d215;
+	background-color:$colorHighlight02;
+	border:1px solid $colorApprove03;
 	border-radius:1px 1px 1px 1px;
 	box-shadow:0 5px 10px rgba(0, 0, 0, 0.25);
 	font-size:11px;
