--- a/core/asset/css/tab.scss
+++ b/core/asset/css/tab.scss
@@ -35,8 +35,8 @@
 		-moz-border-radius:10px 10px 0 0;
 		-webkit-border-radius:10px 10px 0 0;
 		border-radius:10px 10px 0 0;
-		-webkit-box-shadow:0 -1px 1px #D3D7C7 inset;
-		box-shadow:0 -1px 1px #D3D7C7 inset;
+		-webkit-box-shadow:0 -1px 1px $colorCorporate04 inset;
+		box-shadow:0 -1px 1px $colorCorporate04 inset;
 
 		p {
 			display:block;
