--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -44,6 +44,7 @@ $colorApprove04:#c8ddbe;
 $colorApprove05:#9dc08e;
 $colorApprove06:#779124;
 $colorApprove07:#008000;
+$colorApprove08:#70ae6a;
 
 	// Alert marking, todoyu CI: red
 $colorAlert00:#ff0000;
