--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -1,5 +1,18 @@
 //  @see core/doc/theme.html for todoyu corporate identity color-table
 
+	// background color
+$colorBackground:#E3EACE;
+
+
+	// fonts
+	// main fonts
+$fontFamilyMain:Arial, Verdana, Helvetica, sans-serif;
+$fontSizeMain:11px;
+
+	// fonts used for code
+$fontFamilyCode:Courier,monospace;
+
+
 	//  Corporate color, todoyu CI: shades of olive-green
 $colorCorporate00:#f6f8f0;
 $colorCorporate01:#edf1e0;
