* static including css in tmpl > get it from the cache

--- a/core/view/noaccess.tmpl
+++ b/core/view/noaccess.tmpl
@@ -3,10 +3,10 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>{Label core.global.noAccess.pageTitle}</title>
-<link type="text/css" rel="stylesheet" media="all" href="core/asset/css/base.css" />
-<link type="text/css" rel="stylesheet" media="all" href="core/asset/css/layout.css" />
-<link type="text/css" rel="stylesheet" media="all" href="core/asset/css/content.css" />
-<link type="text/css" rel="stylesheet" media="all" href="core/asset/css/tab.css" />
+<link type="text/css" rel="stylesheet" media="all" href="cache/css/core/asset/css/base.css" />
+<link type="text/css" rel="stylesheet" media="all" href="cache/css/core/asset/css/layout.css" />
+<link type="text/css" rel="stylesheet" media="all" href="cache/css/core/asset/css/content.css" />
+<link type="text/css" rel="stylesheet" media="all" href="cache/css/core/asset/css/tab.css" />
 <style type="text/css">
 #box {
 	width:680px;
