--- a/core/view/select-grouped.tmpl
+++ b/core/view/select-grouped.tmpl
@@ -1,24 +1,3 @@
 <select {$extraAttributes} {if $htmlName}name="{$htmlName}"{/if} {if $htmlId}id="{$htmlId}"{/if} class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {if $fieldClass}class="{$fieldClass}"{/if}>
-	{if !$multiple && !$noPleaseSelect}
-		<option value="0">{if $pleaseSelectLabel}{Label $pleaseSelectLabel}{else}{Label core.form.select.pleaseSelect}{/if}</option>
-		<option value="0" disabled="disabled">---------------------------</option>
-	{/if}
-	{foreach $options label group}
-		{if $label != "none"}
-			<optgroup label="{Label $label}">
-		{/if}
-		{foreach $group option}
-			{$isSelected = false}
-			{if in_array($option.value, $value) && !$option.disabled}
-				{$isSelected = true}
-				{$value	= unsetArrayValue($value, $option.value)}
-			{/if}
-			<option value="{htmlencode $option.value}" {if $option.class}class="{$option.class}"{/if} {if $isSelected} selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>
-				{Label $option.label}
-			</option>
-		{/foreach}
-		{if $label != "none"}
-			</optgroup>
-		{/if}
-	{/foreach}
+	{include file="select-grouped-options.tmpl"}
 </select>
