--- a/core/asset/css/panelwidget-searchlist.scss
+++ b/core/asset/css/panelwidget-searchlist.scss
@@ -14,17 +14,13 @@
 			display:inline-block;
 			width:95%;
 			padding:1px 5px;
-			margin-top:3px;
-			border:1px solid $colorNeutral02;
-			border-bottom:none; }
+			margin-top:3px; }
 	}
 
 	ul {
 		display:inline-block;
 		width:95%;
-		padding:5px;
-		border:1px solid $colorNeutral02;
-		border-top:none; }
+		padding:5px; }
 
 	li {
 		line-height:18px;
