--- a/core/view/panelwidget-searchbox.tmpl
+++ b/core/view/panelwidget-searchbox.tmpl
@@ -1,5 +1,8 @@
 <form id="panelwidget-{$id}-form">
-	<label for="panelwidget-{$id}-sword">{Label core.global.search}</label>
+	<label for="panelwidget-{$id}-searchword">{Label core.global.search}</label>
 	<input type="text" id="panelwidget-{$id}-searchword" value="{htmlencode $searchWord}" />
 	<a class="icon clearIcon hidden" id="panelwidget-{$id}-clear"></a>
 </form>
+<script type="text/javascript">
+{$jsInit}
+</script>
