--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -17,7 +17,7 @@ $fontFamilyCode:Courier,monospace;
 $colorCorporate00:#f6f8f0;
 $colorCorporate01:#edf1e0;
 $colorCorporate02:#e3eace;     // Main background color
-$colorCorporate03:#e1e5d8;
+$colorCorporate03:#e1e5d8;		// Context Menu hover
 $colorCorporate04:#d0d6be;
 $colorCorporate05:#adb989;
 $colorCorporate06:#969C85;   // dark-olive, used for overlay
@@ -44,6 +44,7 @@ $colorHighlight01:#e9eda1;
 $colorHighlight02:#f1f3be;
 $colorHighlight03:#ffffe0;
 $colorHighlight04:#ffffbb;
+$colorHighlight05:#f6f6c8;
 
 	// Notice, todoyu CI: yellow/orange
 $colorNotice00:#ffac00;
