--- a/core/asset/css/list.scss
+++ b/core/asset/css/list.scss
@@ -11,13 +11,20 @@ table.list {
 
 	th,
 	td {
-		padding:3px 0 3px 5px;
+		padding:3px 0 3px 12px;
 		vertical-align:top;
+
+		.nowrap {
+        		white-space:nowrap;
+
+        }
 
 		> span.icon {
 			height:25px;
-			margin:-2px 4px -8px 2px; }
+			margin:-2px 4px -8px -2px; }
 	}
+
+
 }
 
 
