--- a/core/asset/css/list.scss
+++ b/core/asset/css/list.scss
@@ -1,6 +1,9 @@
 @import "../../config/theme.scss";
 
 
+/* ---------------------------------------
+	Standard Table
+   --------------------------------------- */
 
 table.list {
 	width:100%;
@@ -27,6 +30,16 @@ table.list {
 		}
 	}
 
+	a {
+    	text-decoration:underline;
+
+    	&:focus {
+    		outline:none; }
+    }
+
+    a:hover {
+		background-color:$colorNeutral01;
+    }
 }
 
 
