* changed: open duration picker closes on body click * whitespace cleanups

--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -1,7 +1,7 @@
 //  @see core/doc/theme.html for todoyu corporate identity color-table
 
 	// background color
-$colorBackground:#E3EACE;
+$colorBackground:#e3eace;
 
 
 	// fonts
@@ -16,11 +16,11 @@ $fontFamilyCode:Courier,monospace;
 	//  Corporate color, todoyu CI: shades of olive-green
 $colorCorporate00:#f6f8f0;
 $colorCorporate01:#edf1e0;
-$colorCorporate02:#e3eace;     // Main background color
+$colorCorporate02:#e3eace;		// Main background color
 $colorCorporate03:#e1e5d8;		// Context Menu hover
 $colorCorporate04:#d0d6be;
 $colorCorporate05:#adb989;
-$colorCorporate06:#969C85;   // dark-olive, used for overlay
+$colorCorporate06:#969C85;		// Dark-olive, used for overlay
 
 	// Basic colors
 $white:#ffffff;
@@ -69,11 +69,11 @@ $colorAlert04:#f6e0e0;
 
 	// todoyu CI: blue
 $blue00:#b9eefc;
-$blue01:#CCD6E2;
+$blue01:#ccd6e2;
 $blue02:#50c5b5;
 $blue03:#4f8ab4;
 $blue04:#24a5c3;
-$blue05:#316AC5;
-$blue06:#0065A6;
+$blue05:#316ac5;
+$blue06:#0065a6;
 $blue07:#88aacc;
 $blue08:#aaccee;
