--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -49,6 +49,7 @@ $colorHighlight05:#f6f6c8;
 	// Notice, todoyu CI: yellow/orange
 $colorNotice00:#ffac00;
 $colorNotice01:#ffdd99;
+$colorNotice02:#ff8000;
 
 	// Positive marking, todoyu CI: green
 $colorApprove01:#b0d026;
