--- a/core/asset/css/listscrollloader.scss
+++ b/core/asset/css/listscrollloader.scss
@@ -8,7 +8,7 @@
 		background-color: $colorNeutral01;
 		border: 1px solid $colorNeutral03;
 		position: relative;
-		bottom: 50px;
-		margin-bottom: -20px;
+		//bottom: 50px;
+		//margin-bottom: -20px;
 	}
 }
