* Bugfix: Fixed linux-chrome-styling-bug

--- a/core/asset/css/form.scss
+++ b/core/asset/css/form.scss
@@ -131,6 +131,7 @@ input {
 	-webkit-box-sizing:border-box;
 	-khtml-box-sizing:border-box;
 	-o-box-sizing:border-box;
+	background-color: transparent;
 }
 
 	input.checkbox,
