* Styling & positioning for warningElements

--- a/core/asset/css/form.scss
+++ b/core/asset/css/form.scss
@@ -444,6 +444,7 @@ form .fElement.warning {
 		border: 1px solid $blue06;
 		background-color: $blue00;
 		padding: 2px 0 2px 3px;
+		min-width: 210px;
 	}
 }
 
