--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -50,6 +50,7 @@ $colorHighlight05:#f6f6c8;
 $colorNotice00:#ffac00;
 $colorNotice01:#ffdd99;
 $colorNotice02:#ff8000;
+$colorNotice03:#ffecc5;
 
 	// Positive marking, todoyu CI: green
 $colorApprove01:#b0d026;
