--- a/install/asset/css/installer.scss
+++ b/install/asset/css/installer.scss
@@ -1,3 +1,5 @@
+@import "../../../core/config/theme.scss";
+
 #contentBox {
 	top:20px;
 	float:left;
@@ -11,32 +13,28 @@
 p.installMessage {
 	padding:10px 10px 10px 40px;
 	margin:0 12px 12px 12px;
-	border:2px solid #fff;
-	background:#edf1e0 url(../img/icons.png) 0 1000px no-repeat;
+	border:2px solid $white;
+	background:$colorCorporate00 url(../img/icons.png) 0 1000px no-repeat;
 	font-weight:bold;
 	color:#000;
-}
 
-p.installMessage.success {
-	border-color:#008000;
-	color:#008000;
-	background-position:10px -20px;
-}
+	&.success {
+		border-color:	$colorApprove07;
+		color:			$colorApprove07;
+		background-position:10px -20px;
+	}
 
-p.installMessage.error {
-	border-color:#f00;
-	color:#f00;
-	background-position:10px 10px;
-}
-
-p.installMessage.info {
-
+	&.error {
+		border-color:	$colorAlert00;
+		color:			$colorAlert00;
+		background-position:10px 10px;
+	}
 }
 
 #footer {
 	width:auto !important;
-	border:1px solid #d3dabb;
-	background-color:#edf1e0;
+	border:1px solid $colorCorporate04;
+	background-color:$colorCorporate01;
 	clear:both;
 	margin:20px 8px 10px 8px;
 	padding:15px;
@@ -49,18 +47,20 @@ p.installMessage.info {
 	height:380px;
 	overflow-x:scroll;
 	margin:12px 0;
-	border:1px dotted #ffa800;
-	background-color:#f9f3e8;
+	border:1px dotted $colorNotice00;
+	background-color: $colorNotice03;
 	padding:5px;
-}
 
-.sqlQuery ul li {
-	margin-left:20px;
+	& ul li {
+		margin-left:20px;
+	}
+
+
 }
 
 .blockcontent span.title {
-	background-color:#edf1e0;
-	border:1px solid #fff;
+	background-color:$colorCorporate01;
+	border:1px solid $colorCorporate00;
 	padding:8px 0 8px 12px;
 	display:block;
 	margin-bottom:12px;
@@ -70,7 +70,7 @@ p.installMessage.info {
 
 
 select#database option.disabled {
-	color:#CCC;
+	color: $colorNeutral03;
 }
 
 
@@ -78,73 +78,69 @@ select#database option.disabled {
 /* -----------------------------------
 	Panel: steps of installation
    ----------------------------------- */
-#panelwidget-installprogress h1 span.title {
-	padding-left:10px;
-}
-#panelwidget-installprogress h6 {
-  	font-size:14px;
-	font-weight:bold;
-	margin-bottom:10px;
-}
-#panelwidget-installprogress .content {
+#panelwidget-installprogress {
 
-}
-#panelwidget-installprogress ul {
+	& h1 span.title {
+		padding-left:10px;
+	}
 
-}
-#panelwidget-installprogress ul li {
-	font-size:12px;
-	padding:8px 8px 8px 20px;
-	color:#ccc;
-}
-#panelwidget-installprogress ul li.done {
-	color:#000;
-}
-#panelwidget-installprogress ul li.done .icon {
-	display:block;
-	position:absolute;
-	left:0;
-	width:16px;
-	height:16px;
-	background:url(../img/icons.png) no-repeat 0 -29px;
-}
-#panelwidget-installprogress ul li.current {
-	color:#C51C1C;
-	font-weight:bold;
-}
+	& h6 {
+		font-size:14px;
+		font-weight:bold;
+		margin-bottom:10px;
+	}
 
+	& ul li {
+		font-size: 12px;
+		padding: 8px 8px 8px 20px;
+		color: $colorNeutral03;
 
+		&.done {
+			color: $black;
+
+			& .icon {
+				display:block;
+				position:absolute;
+				left:0;
+				width:16px;
+				height:16px;
+				background:url(../img/icons.png) no-repeat 0 -29px;
+			}
+		}
+
+		&.current {
+			color: $colorAlert02;
+			font-weight:bold;
+		}
+	}
+}
 
 table.dbstruct {
 
-}
+	td {
+		padding:5px;
+		border-left:1px solid $colorNotice00;
 
-table.dbstruct th,
-table.dbstruct td {
-	padding:5px;
-}
+		&.table {
+			font-weight:bold;
+		}
+	}
 
-table.dbstruct th {
-	text-align:left;
-	background-color:#ffa800;
-	border-bottom:2px dashed #000;
-}
+	th {
+		padding:5px;
+		text-align:left;
+		background-color:$colorNotice00;
+		border-bottom:2px dashed $black;
 
-table.dbstruct th.table,
-table.dbstruct th.column {
-	width:200px;
-}
+		&.table,
+		&.column {
+			width:200px;
+		}
 
-
-table.dbstruct th.type {
-	width:150px;
-}
-table.dbstruct td {
-	border-left:1px solid #ffa800;
-}
-
-table.dbstruct td.table {
-	font-weight:bold;
+		&.type {
+			width:150px;
+		}
+	}
 }
 
 p.section {
@@ -152,8 +148,6 @@ p.section {
 	font-size:14px;
 	margin:10px;
 }
-
-
 
 /* -----------------------------------
 	Form elements
@@ -173,8 +167,6 @@ input#email.adminaccount {
 	width:99%;
 }
 
-
-
 /* ---------------------------------
 	General content boxes, styles
    --------------------------------- */
@@ -185,50 +177,49 @@ input#email.adminaccount {
 .content {
 	margin:8px;
 	padding:1px;
-}
 
-.content .boxContent {
-	padding-top:12px;
-	background-color:#e3eace;
-}
+	& .boxContent {
+		padding-top:12px;
+		background-color: $colorCorporate02;
 
-.content .boxContent form {
-	padding:0 12px;
-}
+		& form {
+			padding:0 12px;
+		}
 
-.content .boxContent .blockcontent {
-	padding-bottom:10px;
-}
-.content .boxContent .blockcontent .installMessage {
-	margin:0 0 10px 0;
-}
+		& .blockcontent {
+			padding-bottom:10px;
+		}
 
-
+		& .installMessage {
+			margin:0 0 10px 0;
+		}
+	}
+}
 
 /* -----------------------
 	Text
    ----------------------- */
 .error {
-	color:red;
+	color:$colorAlert00;
 }
 
 .textError{
 	margin:0 0 8px 12px;
 	padding:8px 0 8px 12px;
-	border-color:red !important;
-	background-color:#fdc5c5;
+	border-color: $colorAlert00 !important;
+	background-color: $colorAlert04;
 }
 
 .textInfo{
-	border-color:#ffa800;
-	background-color:#fdeec3;
+	border-color: $colorNotice00;
+	background-color:$colorNotice03;
 }
 
 .textSuccess{
 	margin:0 0 8px 12px;
 	padding:8px 0 8px 12px;
-	border-color:#048e01;
-	background-color:#96f384;
+	border-color: $colorApprove08;
+	background-color: $colorApprove04;
 }
 
 .bullet {
@@ -237,7 +228,7 @@ input#email.adminaccount {
 }
 
 .redLabel {
-	color:#ff0000;
+	color: $colorAlert00;
 }
 
 
@@ -254,17 +245,14 @@ input#email.adminaccount {
 	position:relative;
 	top:20px;
 	width:270px;
-	background-color:#fff;
+	background-color: $white;
+
+	& .panelFooter {
+		height:51px;
+		margin-top:-2px;
+		background: $colorCorporate03 url('../img/panel-footer.png') no-repeat 0 0;
+	}
 }
-
-#licence .panelFooter,
-#panelx .panelFooter {
-	height:51px;
-	margin-top:-2px;
-	background:#e3eace url('../img/panel-footer.png') no-repeat 0 0;
-}
-
-
 
 /* ----------------------------
  	Todoyu Panelwidget Slogan
@@ -292,74 +280,72 @@ input#email.adminaccount {
 	License agreement
    --------------------------- */
 #licenseagreement {
-	background-color:#fbfff0;
+	background-color: $colorCorporate00;
 	padding:20px 0 28px 24px;
-}
-	.enduserlicense {
-		width:580px;
-		height:270px;
-		border:1px solid #D6D6D6;
-		overflow-y:scroll;
-		background-color:#fff;
-		margin:8px 0 28px 0;
-		padding:4px;
-	}
-	.enduserlicense pre {
-		font-family:monospace;
-		font-size:12px !important;
-	}
 
-	#licenseagreement h2 {
+	& h2 {
 		font-weight:normal;
 		font-size:11px;
 		text-transform:uppercase;
 		letter-spacing:1px;
 	}
+}
 
-	ul.thirdPartyLibs {
-		padding:4px 0 6px 20px;
-		width:520px;
-		border:1px solid #d6d6d6;
-		background-color:#fff;
-		margin:8px 0 26px 0;
+.enduserlicense {
+	width:580px;
+	height:270px;
+	border:1px solid $colorNeutral02;
+	overflow-y:scroll;
+	background-color: $white;
+	margin:8px 0 28px 0;
+	padding:4px;
+
+	& pre {
+		font-family:monospace;
+		font-size:12px !important;
 	}
+}
 
-		ul.thirdPartyLibs li {
-			list-style-type:disc;
-			padding:2px;
-		}
+ul.thirdPartyLibs {
+	padding:4px 0 6px 20px;
+	width:520px;
+	border:1px solid $colorNeutral02;
+	background-color: $white;
+	margin:8px 0 26px 0;
 
-
+	& li {
+		list-style-type:disc;
+		padding:2px;
+	}
+}
 
 /* ------------------------------------------
 	Installation Locale Selection
    ------------------------------------------ */
 ul.installationLocales {
 	margin-top:20px;
-}
 
-	ul.installationLocales li {
-		background-color:#F7F9ED;
+	& li {
+		background-color:$colorNeutral00;
 		margin:0 0 6px 0;
 		padding:6px 0 6px 18px;
 		width:60%;
 		-moz-border-radius:5px;
 		-khtml-border-radius:5px;
 		-webkit-border-radius:5px;
-	}
 
-		ul.installationLocales li:hover {
-			background-color:#fff;
+		&:hover {
+			background-color: $white;
 			font-weight:bold;
 			cursor:pointer;
 		}
 
-		ul.installationLocales li a {
+		& a {
 			font-size:14px;
-			color:#111;
+			color: $colorNeutral08;
 		}
-
-
+	}
+}
 
 /* --------------------------
 	Headers, footers
@@ -372,8 +358,8 @@ h1.headerLine {
 	-moz-border-radius:5px 5px 0 0;
 	-webkit-border-radius:5px 5px 0 0;
 	border-radius:5px 5px 0 0;
-	border:1px solid #dfdfdf;
-	border-bottom-color:#fff;
+	border:1px solid $colorNeutral02;
+	border-bottom-color: $white;
 }
 
 h1 span.title {
@@ -389,7 +375,7 @@ h1 span.title {
 	Hyperlinks, buttons, labels, etc.
    --------------------------------------- */
 a, a:link {
-	color:#414e1c;
+	color: $colorNeutral08;
 }
 
 label {
@@ -406,19 +392,20 @@ label {
 	width:16px;
 	display:block;
 	background:transparent url('../img/icons.png') no-repeat 0 0;
-}
 
-.servercheckicon.ok {
-	background-position:0 -28px;
+	&.ok {
+		background-position:0 -28px;
+	}
 }
 
 .toggler {
 	height:16px;
 	padding:0 0 0 16px;
 	background:transparent url('../img/icons.png') no-repeat 4px -56px;
-}
-.toggler.expanded {
-	background:transparent url('../img/icons.png') no-repeat 4px -85px;
+
+	&.expanded {
+		background:transparent url('../img/icons.png') no-repeat 4px -85px;
+	}
 }
 
 td {
