* added a:hover background-color to theme

--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -27,6 +27,9 @@ $white:#ffffff;
 $black:#000000;
 $colorTextGeneral:#010101;
 
+	// Link colors
+$colorLinkHover:#dddddd;
+
 	// Greys for general interface elements (backgrounds, headers, forms, etc)
 $colorNeutral00:#f8f8f8;
 $colorNeutral01:#eeeeee;
