* form.scss now uses the newly defined hover background-color from theme

--- a/core/asset/css/form.scss
+++ b/core/asset/css/form.scss
@@ -565,7 +565,7 @@ form .error.typeCheckbox {
 			}
 
 			&:hover {
-				background-color:$colorCorporate02;
+				background-color:$colorLinkHover;
 			}
 		}
 	}
